force-app/main/default/objects/Scorer_Summary__c/Scorer_Summary__c.object-meta.xml
<CustomObject>
    <description>This object is for an individual scorer to rate another object record.</description>
    <label>Scorer Summary</label>
    <nameField>
        <displayFormat>ScrSum-{0}</displayFormat>
        <label>Scorer Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorer Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>