force-app/main/default/objects/Scorer_Summary__c/fields/Assigned_Scorer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Scorer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Scorer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scorer_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>