force-app/main/default/objects/Scorer_Summary__c/fields/Days_to_complete__c.field-meta.xml
<CustomField>
    <fullName>Days_to_complete__c</fullName>
    <label>Days to complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>