force-app/main/default/objects/Scorer_Summary__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <formula>Start_Date__c +  Days_to_complete__c</formula>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>