force-app/main/default/objects/Scorer_Summary__c/fields/Max_Points__c.field-meta.xml
<CustomField>
    <fullName>Max_Points__c</fullName>
    <label>Max Points</label>
    <summarizedField>Scoring_Detail__c.Max_Points__c</summarizedField>
    <summaryForeignKey>Scoring_Detail__c.Scorer_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>