force-app/main/default/objects/Scorer_Summary__c/fields/Points_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Points_Awarded__c</fullName>
    <formula>IF(ISBLANK(Weight_This_Scorer__c),Total_Points__c ,


(Total_Points__c *  Weight_This_Scorer__c)+Total_Points__c)</formula>
    <inlineHelpText>This is calculated based on points awarded on the details or completed scoring details, and add&apos;s the % of weighting for the total.</inlineHelpText>
    <label>Points Awarded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>