force-app/main/default/objects/Scorer_Summary__c/fields/Recommended_for_Funding__c.field-meta.xml
<CustomField>
    <fullName>Recommended_for_Funding__c</fullName>
    <label>Recommended for Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recommended</fullName>
            </value>
            <value>
                <fullName>Not Recommended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>