force-app/main/default/objects/Scorer_Summary__c/fields/Reference_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Reference_Scoring__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Scoring</label>
    <referenceTo>Reference_Scoring__c</referenceTo>
    <relationshipLabel>Scorer Summaries</relationshipLabel>
    <relationshipName>Scorer_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>