force-app/main/default/objects/Scorer_Summary__c/fields/Score_Summary__c.field-meta.xml
<CustomField>
    <fullName>Score_Summary__c</fullName>
    <description>Creates Master Detail to Score Summary</description>
    <label>Score Summary</label>
    <referenceTo>Score_Summary__c</referenceTo>
    <relationshipLabel>Scorer Summaries</relationshipLabel>
    <relationshipName>Scorer_Summaries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>