force-app/main/default/objects/Scorer_Summary__c/fields/Score_Summary_Complete__c.field-meta.xml
<CustomField>
    <fullName>Score_Summary_Complete__c</fullName>
    <formula>Score_Summary__r.Status_frm__c = &quot;Complete&quot;</formula>
    <label>Score Summary Complete</label>
    <type>Checkbox</type>
</CustomField>