force-app/main/default/objects/Scorer_Summary__c/fields/Score_Summary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Score_Summary_Owner__c</fullName>
    <formula>Score_Summary__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score Summary Owner</label>
    <type>Text</type>
</CustomField>