force-app/main/default/objects/Scorer_Summary__c/fields/Scorer_Name__c.field-meta.xml
<CustomField>
    <fullName>Scorer_Name__c</fullName>
    <formula>Assigned_Scorer__r.FirstName &amp; &quot; &quot; &amp; Assigned_Scorer__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scorer Name</label>
    <type>Text</type>
</CustomField>