force-app/main/default/objects/Scorer_Summary__c/fields/Scorer_Record_Available__c.field-meta.xml
<CustomField>
    <fullName>Scorer_Record_Available__c</fullName>
    <description>This box will be check if a user is either assigned to the Scorer Record or the Owner of the Score Summary</description>
    <formula>(Assigned_Scorer__c = $User.Id) ||
(Score_Summary__r.OwnerId = $User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scorer Record Available</label>
    <type>Checkbox</type>
</CustomField>