force-app/main/default/objects/Scorer_Summary__c/fields/Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Points__c</fullName>
    <label>Total Points</label>
    <summarizedField>Scoring_Detail__c.Awarded_Points__c</summarizedField>
    <summaryForeignKey>Scoring_Detail__c.Scorer_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>