force-app/main/default/objects/Scorer_Summary__c/fields/Weight_This_Scorer__c.field-meta.xml
<CustomField>
    <fullName>Weight_This_Scorer__c</fullName>
    <label>Weight This Scorer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>