force-app/main/default/objects/Scorer_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assigned_Scorer__c</columns>
    <columns>Status__c</columns>
    <columns>Score_Summary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Administration</role>
    </sharedTo>
</ListView>