force-app/main/default/objects/Scorer_Summary__c/listViews/All_Available_Scorer_Summaries.listView-meta.xml
<ListView>
    <fullName>All_Available_Scorer_Summaries</fullName>
    <columns>NAME</columns>
    <columns>Assigned_Scorer__c</columns>
    <columns>Status__c</columns>
    <columns>Score_Summary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scorer_Record_Available__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Available Scorer Summaries</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>